feat: convert all calculator prices to EUR in English version
- Convert mini calculator prices from CZK to EUR (1 EUR = 25 CZK)
- Convert full calculator prices from CZK to EUR
- Update all data-cost attributes and displayed prices
- Consistent pricing across portfolio, mini calculator, and full calculator

Mini calculator:
- Starter: 14,900 CZK → €600
- Pro: 34,900 CZK → €1,400
- Custom: 69,000 CZK → €2,760

Full calculator:
- All addons and options converted to EUR
- Summary displays € instead of CZK

--- a/estimator_v2_en.html
+++ b/estimator_v2_en.html
@@ -36,9 +36,9 @@
             <div class="field">
               <label for="type">Website type</label>
               <select id="type" name="type">
-                <option value="starter" data-base="14900" data-days="7">Starter (one‑page) – Mailing included</option>
-                <option value="pro" data-base="34900" data-days="24">Pro (5–8 pages)</option>
-                <option value="full" data-base="69000" data-days="45">Custom (tailored + CMS)</option>
+                <option value="starter" data-base="600" data-days="7">Starter (one‑page) – Mailing included</option>
+                <option value="pro" data-base="1400" data-days="24">Pro (5–8 pages)</option>
+                <option value="full" data-base="2760" data-days="45">Custom (tailored + CMS)</option>
               </select>
               <small>Select the base scope. The price adapts to the options below.</small>
             </div>
@@ -59,8 +59,8 @@
               <label for="cms">Content management (CMS)</label>
               <select id="cms" name="cms">
                 <option value="none" data-cost="0">No CMS</option>
-                <option value="basic" data-cost="6000">Basic CMS (portfolio/news)</option>
-                <option value="blog" data-cost="12000">CMS + blog / case studies</option>
+                <option value="basic" data-cost="240">Basic CMS (portfolio/news)</option>
+                <option value="blog" data-cost="480">CMS + blog / case studies</option>
               </select>
             </div>
 
@@ -68,8 +68,8 @@
               <label for="copy">Copywriting</label>
               <select id="copy" name="copy">
                 <option value="none" data-cost="0">I have content ready</option>
-                <option value="polish" data-cost="3900">Polish (up to 600 words)</option>
-                <option value="full" data-cost="9900">Complete copy (up to 2,000 words)</option>
+                <option value="polish" data-cost="160">Polish (up to 600 words)</option>
+                <option value="full" data-cost="400">Complete copy (up to 2,000 words)</option>
               </select>
             </div>
 
@@ -77,7 +77,7 @@
               <label for="seo">SEO & analytics</label>
               <select id="seo" name="seo">
                 <option value="basic" data-cost="0">Basics (title/desc, H1–H3, GA4, conversions)</option>
-                <option value="plus" data-cost="4900">SEO+ (schema, internal links, 1× landing)</option>
+                <option value="plus" data-cost="200">SEO+ (schema, internal links, 1× landing)</option>
               </select>
             </div>
 
@@ -85,9 +85,9 @@
               <label for="integrations">Integrations</label>
               <select id="integrations" name="integrations">
                 <option value="none" data-cost="0">None</option>
-                <option value="crm" data-cost="4900">CRM (Pipedrive/HubSpot)</option>
+                <option value="crm" data-cost="200">CRM (Pipedrive/HubSpot)</option>
                 <option value="mailing" data-cost="0" selected>Mailing (free with Starter)</option>
-                <option value="both" data-cost="7900">CRM + Mailing</option>
+                <option value="both" data-cost="320">CRM + Mailing</option>
               </select>
             </div>
           </div>
@@ -136,24 +136,24 @@
           <h3>Extras</h3>
           <div class="addons">
             <label class="addon-item">
-              <input type="checkbox" id="abtest" data-cost="2500" />
+              <input type="checkbox" id="abtest" data-cost="100" />
               <div class="addon-content">
                 <div class="addon-title">A/B test of hero section</div>
-                <div class="addon-price">+2 500 CZK</div>
+                <div class="addon-price">+€100</div>
               </div>
             </label>
             <label class="addon-item">
-              <input type="checkbox" id="photos" data-cost="4900" />
+              <input type="checkbox" id="photos" data-cost="200" />
               <div class="addon-content">
                 <div class="addon-title">Micro photos (coordination + 5 retouches)</div>
-                <div class="addon-price">+4 900 CZK</div>
+                <div class="addon-price">+€200</div>
               </div>
             </label>
             <label class="addon-item">
-              <input type="checkbox" id="access" data-cost="2500" />
+              <input type="checkbox" id="access" data-cost="100" />
               <div class="addon-content">
                 <div class="addon-title">Accessibility quick‑wins (WCAG)</div>
-                <div class="addon-price">+2 500 CZK</div>
+                <div class="addon-price">+€100</div>
               </div>
             </label>
           </div>
@@ -167,10 +167,10 @@
             <div class="price-badge">excl. VAT</div>
           </div>
           <div class="summary-value">
-            <span id="price">—</span> CZK
+            <span id="price">—</span> €
           </div>
           <div class="summary-note">
-            Monthly care: <strong id="monthly">0</strong> CZK/mo.
+            Monthly care: <strong id="monthly">0</strong> €/mo.
           </div>
         </div>
         
