--- a/index_en.html
+++ b/index_en.html
@@ -419,7 +419,7 @@
               <div class="estimator-preview" id="estimatorPreview" role="list">
                 <div class="estimator-preview-item" role="button" tabindex="0" aria-expanded="false">
                   <div class="estimator-preview-label">Starter (one-page)</div>
-                <div class="estimator-preview-price">from 14 900 CZK</div>
+                <div class="estimator-preview-price">from €600</div>
                 <div class="estimator-preview-days">7 days</div>
                   <div class="estimator-preview-details" hidden>
                     <ul>
@@ -433,7 +433,7 @@
                 </div>
                 <div class="estimator-preview-item" role="button" tabindex="0" aria-expanded="false">
                 <div class="estimator-preview-label">Pro (5–8 pages)</div>
-                <div class="estimator-preview-price">from 34 900 CZK</div>
+                <div class="estimator-preview-price">from €1,400</div>
                 <div class="estimator-preview-days">24 days</div>
                   <div class="estimator-preview-details" hidden>
                     <ul>
@@ -446,7 +446,7 @@
                 </div>
                 <div class="estimator-preview-item" role="button" tabindex="0" aria-expanded="false">
                 <div class="estimator-preview-label">Custom (custom + CMS)</div>
-                <div class="estimator-preview-price">from 69 000 CZK</div>
+                <div class="estimator-preview-price">from €2,760</div>
                 <div class="estimator-preview-days">45 days</div>
                   <div class="estimator-preview-details" hidden>
                     <ul>
