feat: update hosting & maintenance pricing options
- Change from 2 options to 3 options for hosting & maintenance
- Czech version: Free, 300 Kč/mo, 700 Kč/mo
- English version: Free, €12/mo, €28/mo (1 EUR = 25 CZK)
- More affordable and flexible pricing structure

--- a/estimator_v2.html
+++ b/estimator_v2.html
@@ -123,9 +123,9 @@
           <div class="field">
             <label for="hosting">Hosting a správa</label>
             <select id="hosting" name="hosting">
-              <option value="none" data-monthly="0">Vlastní hosting</option>
-              <option value="mini" data-monthly="1900">Mini care (1,9k/měs)</option>
-              <option value="growth" data-monthly="4900">Growth (4,9k/měs)</option>
+              <option value="none" data-monthly="0">Zdarma</option>
+              <option value="mini" data-monthly="300">Základní péče (300 Kč/měs)</option>
+              <option value="growth" data-monthly="700">Growth (700 Kč/měs)</option>
             </select>
             <small>Paušál není povinný; lze domluvit po předání.</small>
           </div>
