--- a/estimator_v2_en.html
+++ b/estimator_v2_en.html
@@ -123,9 +123,9 @@
           <div class="field">
             <label for="hosting">Hosting & maintenance</label>
             <select id="hosting" name="hosting">
-              <option value="none" data-monthly="0">Own hosting</option>
-              <option value="mini" data-monthly="1900">Mini care (1.9k/mo)</option>
-              <option value="growth" data-monthly="4900">Growth (4.9k/mo)</option>
+              <option value="none" data-monthly="0">Free hosting</option>
+              <option value="mini" data-monthly="12">Basic care (€12/mo)</option>
+              <option value="growth" data-monthly="28">Growth (€28/mo)</option>
             </select>
             <small>Monthly plan is optional; we can agree after delivery.</small>
           </div>
