feat: update brief form header to match calculator design
- Add header-top structure with brand and back-link
- Add Stefan Kyzek branding with F badge
- Style back-link button to match calculator design
- Consistent header layout across brief form and calculator
- Same positioning and styling as shown in calculator screenshot

Changes:
- HTML: Add header-top div with brand and back-link
- CSS: Add .header-top, .brand, .brand-badge, .back-link styles
- Both CZ and EN versions updated
- Matches calculator's professional header design

--- a/brief_form.html
+++ b/brief_form.html
@@ -10,8 +10,14 @@
 </head>
 <body>
 <header class="site-header container">
-  <a href="index.html" class="back-link">← Zpět na hlavní stránku</a>
-<h1>Poptávkový formulář</h1>
+  <div class="header-top">
+    <div class="brand">
+      <span class="brand-badge">F</span>
+      <span>Stefan Kyzek</span>
+    </div>
+    <a href="index.html" class="back-link">← Zpět na hlavní stránku</a>
+  </div>
+  <h1>Poptávkový formulář</h1>
   <p class="lead">Pomozte mi pochopit, jak má váš web působit. Podle odpovědí vám připravím <strong>1‑stránkový náhled</strong> na první schůzku.</p>
 </header>
 
