--- a/brief_form_en.html
+++ b/brief_form_en.html
@@ -10,9 +10,15 @@
 </head>
 <body>
 <header class="site-header container">
-  <a href="index_en.html" class="back-link">← Back to homepage</a>
+  <div class="header-top">
+    <div class="brand">
+      <span class="brand-badge">F</span>
+      <span>Stefan Kyzek</span>
+    </div>
+    <a href="index_en.html" class="back-link">← Back to homepage</a>
+  </div>
   <h1>Project Brief</h1>
-  <p class="lead">Help me understand how your website should feel. Based on your answers I’ll prepare a <strong>one‑page preview</strong> for our first call.</p>
+  <p class="lead">Help me understand how your website should feel. Based on your answers I'll prepare a <strong>one‑page preview</strong> for our first call.</p>
 </header>
 
 <main class="container">
