feat: update brief form question text
- Change question from 'What makes your offer unique?' to 'What sets your company apart?' (EN)
- Change question from 'Co dělá vaši nabídku jedinečnou?' to 'Čím se vaše firma odlišuje?' (CZ)
- More direct and company-focused question
- Better alignment with business positioning

Both CZ and EN versions updated

--- a/brief_form_en.html
+++ b/brief_form_en.html
@@ -55,7 +55,7 @@
           <input id="audience" name="audience" placeholder="Who should use the site?">
         </div>
         <div class="field full">
-          <label for="usp">What makes your offer unique?</label>
+          <label for="usp">What sets your company apart?</label>
           <textarea id="usp" name="usp" rows="2" placeholder="1–3 sentences, key benefits"></textarea>
         </div>
       </div>
