--- a/brief_form.html
+++ b/brief_form.html
@@ -55,7 +55,7 @@
           <input id="audience" name="audience" placeholder="Kdo má web používat?">
         </div>
         <div class="field full">
-          <label for="usp">Co dělá vaši nabídku jedinečnou?</label>
+          <label for="usp">Čím se vaše firma odlišuje?</label>
           <textarea id="usp" name="usp" rows="2" placeholder="1–3 věty, klíčové výhody"></textarea>
         </div>
       </div>
