--- a/index_en.html
+++ b/index_en.html
@@ -553,7 +553,7 @@
           const link = e.target.closest('a[href^="#"]');
           if (!link) return;
           const href = link.getAttribute('href');
-          const target = document.querySelector(href);
+          const target = href === '#' ? null : document.querySelector(href);
           if (target) {
             e.preventDefault();
             target.scrollIntoView({ behavior: 'smooth' });
