fix(services): disable reveal animation on Services section (CZ/EN) for reliable mobile render

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
   </section>
 
       <!-- Services -->
-      <section id="sluzby" class="reveal" aria-labelledby="services-title">
+      <section id="sluzby" aria-labelledby="services-title">
         <div class="container">
           <div class="section-head">
             <div>
