--- a/index_en.html
+++ b/index_en.html
@@ -322,7 +322,7 @@
       </section>
 
       <!-- Services -->
-      <section id="services" class="reveal" aria-labelledby="services-title">
+      <section id="services" aria-labelledby="services-title">
         <div class="container">
           <div class="section-head">
             <div>
