fix(brief): bump cache-busting query to v=3; revert Vercel headers to avoid config error

--- a/brief_form_en.html
+++ b/brief_form_en.html
@@ -295,7 +295,7 @@
   <p>© 2025 – Funweb Brief Form.</p>
 </footer>
 
-<script src="brief_form.js"></script>
+<script src="brief_form.js?v=3"></script>
 <script>
   (function(){
     function applyTheme(slug){
