--- a/brief_form.html
+++ b/brief_form.html
@@ -296,7 +296,7 @@
   <p>© 2025 – Poptávkový formulář Funweb.</p>
 </footer>
 
-<script src="brief_form.js"></script>
+<script src="brief_form.js?v=3"></script>
 <script>
   (function(){
     function applyTheme(slug){
