feat(email): add brand header with logo; adjust styles for light/dark readability (CZ/EN customer/owner)

--- a/emails/owner_en.html
+++ b/emails/owner_en.html
@@ -3,24 +3,34 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="color-scheme" content="light dark">
   <title>New brief request</title>
   <style>
-    body{margin:0;padding:0;background:#f6f7f9;color:#111;font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial,sans-serif}
-    .wrap{max-width:720px;margin:0 auto;background:#fff}
+    body{margin:0;padding:0;background:#f6f7f9;color:#0b0f17;font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial,sans-serif}
+    .wrap{max-width:720px;margin:0 auto;background:#ffffff;border:1px solid #e5e7eb;border-radius:14px;overflow:hidden}
+    .brand{padding:22px 24px;text-align:center;background:#0b0f17}
+    .brand img{display:inline-block;width:64px;height:64px;border-radius:14px}
+    .brand-title{margin:8px 0 0;font-weight:800;color:#ffffff;font-size:14px;letter-spacing:.3px}
     .section{padding:24px}
     h1{font-size:20px;margin:0 0 8px}
     h2{font-size:16px;margin:16px 0 8px}
     p{margin:0 0 12px;line-height:1.55}
-    .muted{color:#555}
+    .muted{color:#525a63}
     table{width:100%;border-collapse:collapse}
-    th,td{border:1px solid #eee;padding:10px;text-align:left;vertical-align:top}
-    th{background:#fafafa;width:220px;color:#555}
-    pre{white-space:pre-wrap;word-break:break-word;background:#fafafa;border:1px solid #eee;border-radius:8px;padding:12px}
-    .footer{padding:16px 24px 32px;color:#666;font-size:12px}
+    th,td{border:1px solid #e5e7eb;padding:10px;text-align:left;vertical-align:top}
+    th{background:#fafafa;width:220px;color:#556070}
+    pre{white-space:pre-wrap;word-break:break-word;background:#fafafa;border:1px solid #e5e7eb;border-radius:8px;padding:12px}
+    .footer{padding:16px 24px 24px;color:#6b7280;font-size:12px}
   </style>
 </head>
 <body>
   <div class="wrap">
+    <div class="brand">
+      <a href="https://funweb.cz" target="_blank" rel="noopener">
+        <img src="https://funweb.cz/bee-logo.svg" alt="Funweb logo" width="64" height="64" />
+      </a>
+      <div class="brand-title">Funweb • Stefan Kyzek</div>
+    </div>
     <div class="section">
       <h1>New brief request</h1>
       <p class="muted">A new submission just arrived. Full details below.</p>
