--- a/emails/customer_cz.html
+++ b/emails/customer_cz.html
@@ -3,27 +3,37 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="color-scheme" content="light dark">
   <title>Potvrzení přijetí poptávky</title>
   <style>
-    body{margin:0;padding:0;background:#f6f7f9;color:#111;font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial,sans-serif}
-    .wrap{max-width:640px;margin:0 auto;background:#fff}
+    body{margin:0;padding:0;background:#f6f7f9;color:#0b0f17;font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial,sans-serif}
+    .wrap{max-width:640px;margin:0 auto;background:#ffffff;border:1px solid #e5e7eb;border-radius:14px;overflow:hidden}
+    .brand{padding:22px 24px;text-align:center;background:#0b0f17}
+    .brand img{display:inline-block;width:64px;height:64px;border-radius:14px}
+    .brand-title{margin:8px 0 0;font-weight:800;color:#ffffff;font-size:14px;letter-spacing:.3px}
     .section{padding:24px 24px 16px}
     h1{font-size:20px;margin:0 0 8px}
     h2{font-size:16px;margin:16px 0 8px}
-    p{margin:0 0 12px;line-height:1.55}
-    .muted{color:#555}
-    .kv{border:1px solid #eee;border-radius:12px;padding:16px;margin:8px 0;background:#fafafa}
+    p{margin:0 0 12px;line-height:1.6}
+    .muted{color:#525a63}
+    .kv{border:1px solid #e5e7eb;border-radius:12px;padding:16px;margin:8px 0;background:#fafafa}
     .row{display:flex;gap:12px;margin:6px 0}
-    .label{min-width:140px;color:#555}
+    .label{min-width:140px;color:#556070}
     .val{flex:1}
     .list{margin:6px 0;padding-left:18px}
-    .footer{padding:16px 24px 32px;color:#666;font-size:12px}
-    .cta{display:inline-block;background:#111;color:#fff;text-decoration:none;padding:10px 14px;border-radius:10px}
+    .footer{padding:16px 24px 24px;color:#6b7280;font-size:12px}
+    .cta{display:inline-block;background:#0b0f17;color:#fff;text-decoration:none;padding:10px 14px;border-radius:10px}
   </style>
   <!-- Placeholders like {{brand}} will be replaced on server -->
 </head>
 <body>
   <div class="wrap">
+    <div class="brand">
+      <a href="https://funweb.cz" target="_blank" rel="noopener">
+        <img src="https://funweb.cz/bee-logo.svg" alt="Funweb logo" width="64" height="64" />
+      </a>
+      <div class="brand-title">Funweb • Stefan Kyzek</div>
+    </div>
     <div class="section">
       <h1>Děkuji, poptávka byla přijata ✅</h1>
       <p class="muted">Záznam tvého briefu jsem právě obdržel. Do 1 hodiny se ozvu s termíny krátkého úvodního hovoru a dalším postupem.</p>
