feat(email): add explicit Funweb contact block (mail+phone) to customer emails; clarify reply-to in owner emails

--- a/emails/customer_cz.html
+++ b/emails/customer_cz.html
@@ -71,6 +71,9 @@
       <p style="margin-top:14px">
         <a class="cta" href="https://funweb.cz" target="_blank" rel="noopener">Pokračovat na web</a>
       </p>
+      <div class="kv" style="margin-top:12px">
+        <div class="row"><div class="label">Váš kontakt na Funwebu</div><div class="val"><strong>Stefan Kyzek</strong><br>stefan@funweb.cz<br>+420 705 920 948</div></div>
+      </div>
     </div>
 
     <div class="footer">
