--- a/emails/owner_cz.html
+++ b/emails/owner_cz.html
@@ -66,6 +66,7 @@
         <tr><th>Telefon</th><td>{{phone}}</td></tr>
         <tr><th>Souhlas</th><td>{{consent}}</td></tr>
       </table>
+      <p class="muted" style="margin-top:10px">Odpověď (reply‑to) je nastavena na e‑mail zákazníka. Váš kontakt: stefan@funweb.cz, +420 705 920 948</p>
     </div>
 
     <div class="section">
