--- a/emails/owner_en.html
+++ b/emails/owner_en.html
@@ -66,6 +66,7 @@
         <tr><th>Phone</th><td>{{phone}}</td></tr>
         <tr><th>Consent</th><td>{{consent}}</td></tr>
       </table>
+      <p class="muted" style="margin-top:10px">Reply-to is set to customer email above. Your contact: stefan@funweb.cz, +420 705 920 948</p>
     </div>
 
     <div class="section">
