chore(email): use https://funweb.cz/logo-email.png in all templates

--- a/emails/owner_cz.html
+++ b/emails/owner_cz.html
@@ -27,7 +27,7 @@
   <div class="wrap">
     <div class="brand">
       <a href="https://funweb.cz" target="_blank" rel="noopener">
-        <img src="https://funweb.cz/favicon.svg" alt="Funweb logo" width="64" height="64" style="background:#0b0f17;border-radius:50%" />
+        <img src="https://funweb.cz/logo-email.png" alt="Funweb logo" width="64" height="64" style="border-radius:12px" />
       </a>
         <div class="brand-title">Funweb • Stefan Kyzek</div>
     </div>
