--- a/index_en.html
+++ b/index_en.html
@@ -12,8 +12,8 @@
     <meta property="og:url" content="https://kyzek.cz/" />
     <meta property="og:image" content="https://kyzek.cz/og-image.jpg" />
 
-    <!-- Favicon (volitelně nahraďte vlastními) -->
-    <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ccircle cx='50' cy='50' r='48' fill='%234f46e5'/%3E%3Ctext x='50' y='58' font-size='44' text-anchor='middle' fill='white' font-family='Arial, Helvetica, sans-serif'%3EF%3C/text%3E%3C/svg%3E" />
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/logo-email.png" />
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -542,7 +542,6 @@
     <script defer src="script.js"></script>
     <script defer src="themes_v2.js"></script>
     <script defer src="aurora-effects.js"></script>
-    <script src="theme_debug.js"></script>
 
     <!-- Mobile nav removed -->
 
