--- a/index_en.html
+++ b/index_en.html
@@ -13,7 +13,7 @@
     <meta property="og:image" content="https://kyzek.cz/og-image.jpg" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/logo-email.png" />
+    <link rel="icon" type="image/svg+xml" href="/logo-email.svg" />
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
