fix(brand): remove extra 'F' text next to logo in brief; ensure navbar logo has solid bg;

--- a/brief_form_en.html
+++ b/brief_form_en.html
@@ -11,8 +11,8 @@
 <body>
 <header class="site-header container">
   <div class="header-top">
-    <div class="brand">
-      <span class="brand-badge">F</span>
+  <div class="brand">
+      <span class="brand-badge" aria-label="Funweb"></span>
       <span>Stefan Kyzek</span>
     </div>
     <a href="index_en.html" class="back-link">← Back to homepage</a>
