--- a/brief_form.html
+++ b/brief_form.html
@@ -12,7 +12,7 @@
 <header class="site-header container">
   <div class="header-top">
     <div class="brand">
-      <span class="brand-badge">F</span>
+      <span class="brand-badge" aria-label="Funweb"></span>
       <span>Stefan Kyzek</span>
     </div>
     <a href="index.html" class="back-link">← Zpět na hlavní stránku</a>
