--- a/estimator_v2.html
+++ b/estimator_v2.html
@@ -16,7 +16,7 @@
     <div class="container">
       <div class="header-content">
         <div class="brand">
-          <span class="brand-badge">F</span>
+          <span class="brand-badge"></span>
           <span>Stefan Kyzek</span>
         </div>
         <a href="index.html" class="back-link">← Zpět na hlavní stránku</a>
