--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <div class="profile-card__content">
               <div class="profile-card__header">
                 <div class="profile-card__avatar">
-                  <div class="profile-card__avatar-image" style="background-image: url('IMG_1620.webp'); background-size: cover; background-position: center;"></div>
+                  <div class="profile-card__avatar-image" style="background-image: url('profile-pic.webp'); background-size: cover; background-position: center;"></div>
                   <div class="profile-card__status" data-status="online"></div>
                 </div>
                 <div class="profile-card__user-info">
