fix(nav): eliminate bottom transition; add interactive-widget=resizes-content; earlier visualViewport listeners

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="cs">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover, interactive-widget=resizes-content" />
     <title>Tvořím weby, které prodávají – design, marketing a obchod</title>
     <meta name="description" content="Weby na míru, grafika a marketingové strategie. Spojuji design, marketing a obchodní zkušenosti, abyste měli web, který nejen vypadá skvěle, ale i prodává." />
     <meta property="og:type" content="website" />
